--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
 </head>
 
 <body class=".inter-normal">
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-tittle"><span class="text-primary">LOGO</span></h3>
-            <a href=""></a><button ><span class="text-button">Sign Up<span></button>
+            <a href=""></a><button class="btn-primary">Sign Up</button>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-tittle">Cool Dark UI Template For <br>Webflow Agencies!</h1>
+                <a href=""></a><button class="btn-primary">Stay Focused</button>
+
+            </div>
+
+        </div>
     </header>
 
 
