--- a/index.html
+++ b/index.html
@@ -21,13 +21,25 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h1 class="banner-tittle">Cool Dark UI Template For <br>Webflow Agencies!</h1>
+                <h1 class="banner-tittle">Cool Dark UI Template For Webflow Agencies!
+                </h1>
                 <a href=""></a><button class="btn-primary">Stay Focused</button>
+
 
             </div>
 
         </div>
     </header>
+    <section>
+        <div class="Action-section">
+
+            <h2 class="action-header">See It in Action</h2> ,
+            <p> Explore the live preview and imagine your brand in this bold new look</p>
+            <button class="btn-primary">Launch Live Preview</button>
+            <img class="img-1" src="B12A01-landing-launchpad/Assets/wc-mini.png" alt="">
+        </div>
+
+    </section>
 
 
 
