--- a/index.html
+++ b/index.html
@@ -32,11 +32,31 @@
     </header>
     <section>
         <div class="Action-section">
+            <div>
+                <h2 class="action-header">See It in Action</h2>
+                <p class="action-para"> Explore the live preview and imagine your <br> brand in this bold new look</p>
+                <button class="btn-primary">Launch Live Preview</button>
+            </div>
+            <div>
+                <img class="img-1" src="B12A01-landing-launchpad/Assets/wc-mini.png" alt="">
+            </div>
 
-            <h2 class="action-header">See It in Action</h2> ,
-            <p> Explore the live preview and imagine your brand in this bold new look</p>
-            <button class="btn-primary">Launch Live Preview</button>
-            <img class="img-1" src="B12A01-landing-launchpad/Assets/wc-mini.png" alt="">
+        </div>
+        <div class="user-section">
+            <h2 class="user-header"> Joined Thousands of productive Users</h2>
+
+            <div class="user-element1">
+                <h1 class="user-heading"> 50K </h1>
+                <p>Active Users</p>
+            </div>
+            <div class="user-element2">
+                <h1 class="user-heading"> 2M+ </h1>
+                <p>Focus Sessions</p>
+            </div>
+            <div class="user-element3">
+                <h1 class="user-heading"> 95% </h1>
+                <p>Satisfaction Rate</p>
+            </div>
         </div>
 
     </section>
