--- a/index.html
+++ b/index.html
@@ -42,20 +42,70 @@
             </div>
 
         </div>
+
+
+
         <div class="user-section">
             <h2 class="user-header"> Joined Thousands of productive Users</h2>
+            <div class="user-elements">
+                <div>
+                    <h1 class="user-heading"> 50K </h1>
+                    <p class="user-para">Active Users</p>
+                </div>
+                <div>
+                    <h1 class="user-heading"> 2M+ </h1>
+                    <p class="user-para">Focus Sessions</p>
+                </div>
+                <div>
+                    <h1 class="user-heading"> 95% </h1>
+                    <p class="user-para">Satisfaction Rate</p>
+                </div>
+            </div>
 
-            <div class="user-element1">
-                <h1 class="user-heading"> 50K </h1>
-                <p>Active Users</p>
+        </div>
+
+
+
+        <div class="user-feedback">
+            <h1>What Our Users Say</h1>
+            <div class="feedback-1">
+                <div class="review-stars">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                </div>
+
+                <h3> Loved By Designers</h3>
+                <p>"This template instantly leveled up our presence"-Studio Vertex</p>
+                <img src="" alt="">
             </div>
-            <div class="user-element2">
-                <h1 class="user-heading"> 2M+ </h1>
-                <p>Focus Sessions</p>
+            <div class="feedback-2">
+                <div class="review-stars">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                </div>
+
+                <h3> Loved By Designers</h3>
+                <p>"This template instantly leveled up our presence"-Studio Vertex</p>
+                <img src="" alt="">
             </div>
-            <div class="user-element3">
-                <h1 class="user-heading"> 95% </h1>
-                <p>Satisfaction Rate</p>
+            <div class="feedback-3">
+                <div class="review-stars">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                    <img src="B12A01-landing-launchpad/Assets/icon-star.png" alt="Star Ratings">
+                </div>
+
+                <h3> Loved By Designers</h3>
+                <p>"This template instantly leveled up our presence"-Studio Vertex</p>
+                <img src="" alt="">
             </div>
         </div>
 
