user feed back 2

--- a/index.html
+++ b/index.html
@@ -79,7 +79,14 @@
 
                 <h3> Loved By Designers</h3>
                 <p>"This template instantly leveled up our presence"-Studio Vertex</p>
-                <img src="" alt="">
+                <div style="display: flex; gap: 20px;">
+                    <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
+                    <div>
+                        <p>Reviewer Name</p>
+                        <p>Date</p>
+                    </div>
+
+                </div>
             </div>
             <div class="feedback-2">
                 <div class="review-stars">
@@ -92,7 +99,16 @@
 
                 <h3> Loved By Designers</h3>
                 <p>"This template instantly leveled up our presence"-Studio Vertex</p>
-                <img src="" alt="">
+                <div style="display: flex; gap: 20px;">
+                    <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
+                    <div>
+                        <p>Reviewer Name</p>
+                        <p>Date</p>
+                    </div>
+
+                </div>
+
+
             </div>
             <div class="feedback-3">
                 <div class="review-stars">
@@ -105,9 +121,15 @@
 
                 <h3> Loved By Designers</h3>
                 <p>"This template instantly leveled up our presence"-Studio Vertex</p>
-                <img src="" alt="">
+                <div style="display: flex; gap: 20px;">
+                    <img src="B12A01-landing-launchpad/Assets/avatar.png" alt="">
+                    <div>
+                        <p>Reviewer Name</p>
+                        <p>Date</p>
+                    </div>
+
+                </div>
             </div>
-        </div>
 
     </section>
 
