--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body class=".inter-normal">
     <header class="header">
+        <!--Banner & Nav Starts here-->
         <nav>
             <h3 class="nav-tittle"><span class="text-primary">LOGO</span></h3>
             <a href=""></a><button class="btn-primary">Sign Up</button>
@@ -31,6 +32,7 @@
         </div>
     </header>
     <section>
+        <!--Action Section Starts here-->
         <div class="Action-section">
             <div>
                 <h2 class="action-header">See It in Action</h2>
@@ -44,7 +46,7 @@
         </div>
 
 
-
+        <!--User Section Starts here-->
         <div class="user-section">
             <h2 class="user-header"> Joined Thousands of productive Users</h2>
             <div class="user-elements">
@@ -64,7 +66,7 @@
 
         </div>
 
-
+        <!--user Feedback Section Starts here-->
 
         <div class="user-feedback">
             <h1>What Our Users Say</h1>
